# matrix_profile

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  index.html
matrix-profile-wasm/: Cargo.toml  LICENSE_MIT
matrix-profile-wasm/src/: lib.rs
matrix-profile-wasm/tests/: web.rs
matrix-profile-web/: .gitignore  craco.config.js  fix_worker.sh  package-lock.json  package.json  tailwind.config.js
matrix-profile-web/public/: index.html  manifest.json
matrix-profile-web/src/: App.tsx  index.css  index.old  index.tsx  setup.tsx  store.ts  types.ts  utils.ts  wasm.worker.ts
matrix_profile/: Cargo.toml
matrix_profile/benches/: stomp_benchmark.rs
matrix_profile/src/: lib.rs  matrix_profile.rs  naive.rs  stomp.rs  test_utils.rs  utils.rs
static/css/: 3.262e937a.chunk.css  3.262e937a.chunk.css.map  3.40223990.chunk.css  3.40223990.chunk.css.map  3.468cbb98.chunk.css  3.468cbb98.chunk.css.map  3.6f4cfb94.chunk.css  3.6f4cfb94.chunk.css.map  3.70d3abd4.chunk.css  3.70d3abd4.chunk.css.map  3.b732fc90.chunk.css  3.b732fc90.chunk.css.map  main.1e190b1d.chunk.css  main.1e190b1d.chunk.css.map  main.229bce43.chunk.css  main.229bce43.chunk.css.map  main.26913945.chunk.css  main.26913945.chunk.css.map  main.2df481e8.chunk.css  main.2df481e8.chunk.css.map  main.b732fc90.chunk.css  main.b732fc90.chunk.css.map  main.c33f5ff2.chunk.css  main.c33f5ff2.chunk.css.map  main.cc9b7dc4.chunk.css  main.cc9b7dc4.chunk.css.map  main.e89bfc67.chunk.css  main.e89bfc67.chunk.css.map  main.eaef211d.chunk.css  main.eaef211d.chunk.css.map  main.fbe718f6.chunk.css  (+1 more)
(+135 files in other folders)
