[package]
name = "matrix_profile"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
ndarray = "0.14.0"
num-traits = "0.2.14"
ndarray-stats = "0.4.0"

[dev-dependencies]
rand_chacha = "0.3.0"
approx = "0.4.0"
